# stalker

./: .gitignore  README.md
backend_me/: README.md  build.gradle  gradlew  run.sh
backend_me/doc/: mongodata.md
backend_me/lib/: libNativeImageReader.so.1
backend_me/scripts/: groupPostsByLocation.mongo  runPostWebCrawler.sh  runProfileWebCrawler.sh
backend_me/src/main/java/era/put/: MeAwtSessionSetupApp.java  MeBotSeleniumApp.java  MeCityListExtractorTool.java  MeDistributedCopierAndSyncTool.java  MeLocalDataProcessorApp.java  MePostWebCrawlerBotSeleniumApp.java  MeProfileWebCrawlerBotSeleniumApp.java
backend_me/src/main/resources/: application.properties
custom_db_dump/: CMakeLists.txt  README.md  run.sh
custom_db_dump/src/: db_config.h  db_dump.c  db_pr_custom.c  util_cache.c  util_sig.c
custom_db_dump/src/dbinc_auto/: db_ext.h
descriptors_matcher/: .gitignore  CMakeLists.txt  run.sh
descriptors_matcher/src/: avx2.cpp
doc/: mongodata.md
frontend_tools/: .gitignore  README.md  package-lock.json  package.json
frontend_tools/.meteor/: .id  packages
frontend_tools/client/: imageFormat.ts  imageHandling.ts  main.html  main.js  showProfileImages.html  showProfileImages.ts  validateIncomingProfiles.css  validateIncomingProfiles.html  validateIncomingProfiles.js  validateIncomingProfiles.ts
frontend_tools/lib/databaseDefinitions/: image.js  profile.js  profileInfo.js  profileInfo.ts
frontend_tools/scripts/: bootstrap.sh  buildBundle.sh  clean.sh  runLocal.sh
frontend_tools/server/: getProfileDataset.js  main.js  propertiesLoader.js
(+38 files in other folders)
